--- a/Lab_3_20130217_BuiThanhDam.ipynb
+++ b/Lab_3_20130217_BuiThanhDam.ipynb
@@ -53,7 +53,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rhXPQfS1o2oP",
-        "outputId": "537df307-76a5-4702-c640-0f9a4563cb4c"
+        "outputId": "7cb0cf66-6447-4504-9202-496fa054422e"
       },
       "execution_count": 2,
       "outputs": [
@@ -144,7 +144,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3ab87928-c1bd-4697-c6c9-eebf32c5f112"
+        "outputId": "bd893c77-4642-49b7-f31a-8eb48a52d777"
       },
       "execution_count": null,
       "outputs": [
@@ -169,7 +169,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 51
+          "execution_count": 10
         }
       ]
     },
@@ -223,6 +223,7 @@
         "xSalary=dpsalary.iloc[:, 3:4].values\n",
         "salaryArr=imputers.fit_transform(xSalary)\n",
         "\n",
+        "\n",
         "print('Age column')\n",
         "print(ageArr)\n",
         "print('Salary column')\n",
@@ -233,7 +234,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9b72822e-d16c-4629-81c3-2b27e5f5ea27"
+        "outputId": "9371aa30-998c-4fe9-f439-ce70ca958d45"
       },
       "execution_count": null,
       "outputs": [
@@ -241,6 +242,17 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "   No    Country   Age     Salary  Purchased        Age\n",
+            "0   1     France  44.0     72000.0        No  44.000000\n",
+            "1   2      Spain  27.0     48000.0       Yes  27.000000\n",
+            "2   3    Germany  30.0     54000.0        No  30.000000\n",
+            "3   4      Spain  38.0     61000.0        No  38.000000\n",
+            "4   5    Germany  40.0         NaN       Yes  40.000000\n",
+            "5   6     France  35.0     58000.0       Yes  35.000000\n",
+            "6   7      Spain   NaN     52000.0        No  38.777778\n",
+            "7   8     France  48.0     79000.0       Yes  48.000000\n",
+            "8   9    Germany  50.0     83000.0        No  50.000000\n",
+            "9  10     France  37.0     67000.0       Yes  37.000000\n",
             "Age column\n",
             "[[44.        ]\n",
             " [27.        ]\n",
@@ -345,9 +357,7 @@
         "regressor = LinearRegression()\n",
         "\n",
         "dataset1 = pd.read_csv('dataset1.csv')\n",
-        "\n",
-        "x = dataset1.iloc[:,0:1]\n",
-        "y = dataset1.iloc[:,1:2]\n"
+        "\n"
       ],
       "metadata": {
         "id": "3KA4BgbB3tbs"
@@ -358,45 +368,90 @@
     {
       "cell_type": "code",
       "source": [
-        "x_train, x_test, y_train, y_test = train_test_split(x,y, test_size = 0.2, random_state = 1)\n",
+        "\n",
+        "x_train = dataset1[['x']]\n",
+        "y_train = dataset1[['y']]\n",
+        "\n",
         "regressor.fit(x_train,y_train)\n",
         "\n",
-        "y_pred = regressor.predict(x_test)\n",
         "\n",
-        "print(y_pred)\n",
-        "\n",
-        "mr2 = metrics.explained_variance_score(y_test, y_pred)\n",
-        "print(mr2)\n",
-        "\n",
-        "regressor.intercept_\n",
-        "regressor.coef_"
+        "print(regressor.intercept_)\n",
+        "print(regressor.coef_)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "w6nOrri06bOM",
-        "outputId": "9e7d22eb-527b-47d8-d590-fc9795182f4a"
+        "outputId": "9a38de8c-0773-438a-882b-6d3872e96306"
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[3.85714286]]\n",
-            "1.0\n"
+            "[0.4]\n",
+            "[[0.8]]\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_pred = regressor.predict(x_train)\n",
+        "y_pred\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
         },
+        "id": "wuMOL3bs3MpO",
+        "outputId": "15019d12-678f-48aa-ee4d-673318def904"
+      },
+      "execution_count": 8,
+      "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[0.88571429]])"
+              "array([[1.2],\n",
+              "       [2. ],\n",
+              "       [3.6],\n",
+              "       [2.8],\n",
+              "       [4.4]])"
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "r2 = metrics.r2_score(y_train, y_pred)\n",
+        "r2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "l7S8Shp43kSF",
+        "outputId": "3d3cba3b-c934-4729-ad9c-a9b298edfbd5"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.7272727272727273"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
         }
       ]
     },
@@ -434,7 +489,7 @@
         },
         "outputId": "a93a6eb8-d61b-4f1e-945a-d3c86e5165eb"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
