--- a/Lab_4_20130217_BuiThanhDam.ipynb
+++ b/Lab_4_20130217_BuiThanhDam.ipynb
@@ -48,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": null,
       "metadata": {
         "id": "DoVWQ8AEyc-C"
       },
@@ -113,9 +113,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "23306e97-6f18-41f8-b4e4-0973da16b4a1"
+        "outputId": "807e0e6a-c573-4095-fb64-6d769cd44442"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,7 +159,7 @@
         "id": "VHuGWAVG2r_i",
         "outputId": "89bbfd4d-5ce7-45c0-9251-f7120cd5d8e3"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -234,7 +234,7 @@
         },
         "outputId": "79fb446a-61ae-4054-d66d-3072698073d0"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -285,7 +285,7 @@
         "id": "ZJEp3Nng21JY",
         "outputId": "b683754b-bd00-4cfe-d841-b2e03999220b"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -358,9 +358,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2ee6fbf6-5e43-4ded-d158-a595a3ca646c"
+        "outputId": "885391ee-bc28-4798-bb56-728cff2684ee"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -389,13 +389,52 @@
     {
       "cell_type": "code",
       "source": [
-        "# code"
+        "# code\n",
+        "mnist4 = datasets.load_digits()\n",
+        "Xtrain4 = mnist4['data']\n",
+        "ytrain4 = mnist4['target']\n",
+        "\n",
+        "k_range4 = range(1,30,2)\n",
+        "accs4= []\n",
+        "precisions4 = []\n",
+        "recalls4= []\n",
+        "f1s4=[]\n",
+        "\n",
+        "for k in k_range4:\n",
+        "  model = KNeighborsClassifier(n_neighbors=k)\n",
+        "  model.fit(Xtrain4,ytrain4)\n",
+        "  x_train4, x_test4, y_train4, y_test4 = train_test_split(Xtrain4,ytrain4, test_size = 0.3, random_state = 1)\n",
+        "  y_pred4 = model.predict(x_test4)\n",
+        "  accs4.append(accuracy_score(y_test4, y_pred4))\n",
+        "  precisions4.append(metrics.precision_score(y_test4, y_pred4,average='macro'))\n",
+        "  recalls4.append(metrics.recall_score(y_test4, y_pred4,average='macro'))\n",
+        "  f1s4.append(metrics.f1_score(y_test4, y_pred4,average='macro') )\n",
+        "\n",
+        "print(\"Accuracys: \",accs4)\n",
+        "print(\"Precisions: \",precisions4)\n",
+        "print(\"Recalls: \",recalls4)\n",
+        "print(\"F1s: \",f1s4)"
       ],
       "metadata": {
-        "id": "Rw_-8FIf2KxW"
+        "id": "Rw_-8FIf2KxW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a92f5b7d-b53c-4c13-a833-f2375e743d59"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Accuracys:  [1.0, 0.9981481481481481, 0.9962962962962963, 0.9944444444444445, 0.9962962962962963, 0.9962962962962963, 0.9925925925925926, 0.9925925925925926, 0.9925925925925926, 0.9907407407407407, 0.9888888888888889, 0.9833333333333333, 0.9814814814814815, 0.9796296296296296, 0.9777777777777777]\n",
+            "Precisions:  [1.0, 0.9982758620689655, 0.9961622807017543, 0.9941925287356321, 0.9961925287356322, 0.9961925287356322, 0.9923938165295851, 0.9923938165295851, 0.9923530002030546, 0.9906591103058979, 0.9884368880836755, 0.9830500248964494, 0.9807882197167912, 0.9791753164909848, 0.9781161374204809]\n",
+            "Recalls:  [1.0, 0.9982456140350877, 0.9964912280701753, 0.9940308846650788, 0.9962047977085572, 0.9962047977085572, 0.9924377938717939, 0.9924377938717939, 0.9919032250906106, 0.9897293120471324, 0.9881668120471325, 0.982676013038742, 0.9810547237907773, 0.9793598085365401, 0.9776054225716277]\n",
+            "F1s:  [1.0, 0.9982454790303963, 0.9963080267039279, 0.9940529175073953, 0.9961619196163974, 0.9961619196163974, 0.9923809141170841, 0.9923809141170841, 0.9921086718177966, 0.9901310410072138, 0.9882691583579296, 0.9827168025632271, 0.9807700628041527, 0.9791023538193706, 0.9775619349405023]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -428,7 +467,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# code"
+        "# code\n"
       ],
       "metadata": {
         "id": "W_1v_ivR2f6D"
