--- a/Lab_5_20130217_BuiThanhDam.ipynb
+++ b/Lab_5_20130217_BuiThanhDam.ipynb
@@ -373,6 +373,12 @@
         "recallR= metrics.recall_score(y_testR, y_predR,average='macro')\n",
         "f1R = metrics.f1_score(y_testR, y_predR,average='macro') \n",
         "\n",
+        "t2 = PrettyTable(['Name Metric measure','Linear Kernel','Polynomial Kernel',\"Sigmoid Kernel\",'Radial Basis Function Kernel'])\n",
+        "t2.add_row(['Accuracy',accLSvmt2,accPSvm,accSSvm,accRSvm])\n",
+        "t2.add_row(['Precision Score',preLSvmt2,prePSvm,preSSvm,preRSvm])\n",
+        "t2.add_row(['Recall Score',recallLt2,recallP,recallS,recallR])\n",
+        "t2.add_row(['F1',f1Lt2,f1P,f1S,f1R])\n",
+        "print(t2)\n",
         "\n"
       ],
       "metadata": {
@@ -380,10 +386,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B9IxQLjaYQc6",
-        "outputId": "afd42143-c85b-4f3d-d089-32bb9e87bb11"
+        "outputId": "666dfabb-0745-47c4-f979-e2729721a3fe"
       },
-      "execution_count": null,
+      "execution_count": 46,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---------------------+--------------------+--------------------+---------------------+------------------------------+\n",
+            "| Name Metric measure |   Linear Kernel    | Polynomial Kernel  |    Sigmoid Kernel   | Radial Basis Function Kernel |\n",
+            "+---------------------+--------------------+--------------------+---------------------+------------------------------+\n",
+            "|       Accuracy      | 0.9777777777777777 | 0.9777777777777777 | 0.08888888888888889 |      0.9777777777777777      |\n",
+            "|   Precision Score   | 0.9722222222222222 | 0.9722222222222222 | 0.04301075268817204 |      0.9722222222222222      |\n",
+            "|     Recall Score    | 0.9814814814814815 | 0.9814814814814815 | 0.08333333333333333 |      0.9814814814814815      |\n",
+            "|          F1         | 0.975983436853002  | 0.975983436853002  | 0.05673758865248227 |      0.975983436853002       |\n",
+            "+---------------------+--------------------+--------------------+---------------------+------------------------------+\n"
+          ]
+        },
         {
           "output_type": "stream",
           "name": "stderr",
