--- a/Lab_5_20130217_BuiThanhDam.ipynb
+++ b/Lab_5_20130217_BuiThanhDam.ipynb
@@ -388,7 +388,7 @@
         "id": "B9IxQLjaYQc6",
         "outputId": "666dfabb-0745-47c4-f979-e2729721a3fe"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -423,6 +423,139 @@
       "metadata": {
         "id": "b52OPWPD2afi"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cancer = datasets.load_digits()\n",
+        "\n",
+        "Xtrain = cancer['data']\n",
+        "ytrain = cancer['target']\n",
+        "\n",
+        "clf = svm.SVC(kernel='poly') # Linear Kernel\n",
+        "\n",
+        "clf.fit(Xtrain, ytrain)\n",
+        "x_train, x_test, y_train, y_test = train_test_split(Xtrain,ytrain, test_size = 0.3, random_state = 1)\n",
+        "\n",
+        "y_pred = clf.predict(x_test)\n",
+        "\n",
+        "accSvm =  accuracy_score(y_test, y_pred)\n",
+        "preSvm= metrics.precision_score(y_test, y_pred,average='macro')\n",
+        "\n",
+        "recallSvm= metrics.recall_score(y_test, y_pred,average='macro')\n",
+        "f1Svm = metrics.f1_score(y_test, y_pred,average='macro') "
+      ],
+      "metadata": {
+        "id": "P0VR0OQjs4Di"
+      },
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# logic\n",
+        "Xtrain2 = cancer['data']\n",
+        "ytrain2 = cancer['target']\n",
+        "\n",
+        "classifier2 = LogisticRegression() \n",
+        "classifier2.fit(Xtrain2, ytrain2)\n",
+        "\n",
+        "\n",
+        "x_train2, x_test2, y_train2, y_test2 = train_test_split(Xtrain2,ytrain2, test_size = 0.3, random_state = 1)\n",
+        "y_pred2 = classifier2.predict(x_test2)\n",
+        "\n",
+        "\n",
+        "\n",
+        "accLog = accuracy_score(y_test2, y_pred2)\n",
+        "preLog=  metrics.precision_score(y_test2, y_pred2,average='macro') \n",
+        "\n",
+        "recallLog= metrics.recall_score(y_test2, y_pred2,average='macro')\n",
+        "f1Log= metrics.f1_score(y_test2, y_pred2,average='macro') \n",
+        "\n",
+        "#Knn\n",
+        "Xtrain4 = cancer['data']\n",
+        "ytrain4 = cancer['target']\n",
+        "\n",
+        "y_predKnnBest = 0\n",
+        "bestK = 0\n",
+        "k_range4 = range(1,30,2)\n",
+        "for k in k_range4:\n",
+        "  model = KNeighborsClassifier(n_neighbors=k)\n",
+        "  model.fit(Xtrain4,ytrain4)\n",
+        "  x_train4, x_test4, y_train4, y_test4 = train_test_split(Xtrain4,ytrain4, test_size = 0.3, random_state = 1)\n",
+        "  y_pred4 = model.predict(x_test4)\n",
+        "  if((y_predKnnBest <= y_pred4).any()):\n",
+        "    y_predKnnBest = y_pred4\n",
+        "    \n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "accKnn = accuracy_score(y_test4, y_predKnnBest)\n",
+        "preKnn = metrics.precision_score(y_test4, y_predKnnBest,average='macro')\n",
+        "recallKnn= metrics.recall_score(y_test4, y_predKnnBest,average='macro')\n",
+        "f1Knn = metrics.f1_score(y_test4, y_predKnnBest,average='macro') \n",
+        "\n",
+        "# decision tree\n",
+        "Xtrain5 = cancer['data']\n",
+        "ytrain5 = cancer['target']\n",
+        "dtc = DecisionTreeClassifier()\n",
+        "dtc.fit(Xtrain5,ytrain5)\n",
+        "x_train5, x_test5, y_train5, y_test5 = train_test_split(Xtrain4,ytrain4, test_size = 0.3, random_state = 1)\n",
+        "y_pred5 = dtc.predict(x_test5)\n",
+        "\n",
+        "accDT = accuracy_score(y_test5, y_pred5)\n",
+        "preDT = metrics.precision_score(y_test5, y_pred5,average='macro')\n",
+        "recallDT= metrics.recall_score(y_test5, y_pred5,average='macro')\n",
+        "f1DT = metrics.f1_score(y_test5, y_pred5,average='macro') \n",
+        "\n",
+        "\n",
+        "t = PrettyTable(['Name Metric measure','SVM Poly Kernel','Logistic Regression',\"KNN\",'Decision Tree'])\n",
+        "t.add_row(['Accuracy',accSvm,accLog,accKnn,accDT])\n",
+        "t.add_row(['Precision Score',preSvm,preLog,preKnn,preDT])\n",
+        "t.add_row(['Recall Score',recallSvm,recallLog,recallKnn,recallDT])\n",
+        "t.add_row(['F1',f1Svm,f1Log,f1Knn,f1DT])\n",
+        "print(t)"
+      ],
+      "metadata": {
+        "id": "_tK7GIx8s3iK",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c3a30056-d2b0-41b1-800a-ec8ff79a2544"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.9/dist-packages/sklearn/linear_model/_logistic.py:458: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+            "\n",
+            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+            "Please also refer to the documentation for alternative solver options:\n",
+            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+            "  n_iter_i = _check_optimize_result(\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---------------------+-----------------+---------------------+--------------------+---------------+\n",
+            "| Name Metric measure | SVM Poly Kernel | Logistic Regression |        KNN         | Decision Tree |\n",
+            "+---------------------+-----------------+---------------------+--------------------+---------------+\n",
+            "|       Accuracy      |       1.0       |         1.0         | 0.9777777777777777 |      1.0      |\n",
+            "|   Precision Score   |       1.0       |         1.0         | 0.9781161374204809 |      1.0      |\n",
+            "|     Recall Score    |       1.0       |         1.0         | 0.9776054225716277 |      1.0      |\n",
+            "|          F1         |       1.0       |         1.0         | 0.9775619349405023 |      1.0      |\n",
+            "+---------------------+-----------------+---------------------+--------------------+---------------+\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
