--- a/Lab_6_20130217_BuiThanhDam.ipynb
+++ b/Lab_6_20130217_BuiThanhDam.ipynb
@@ -48,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 1,
       "metadata": {
         "id": "DoVWQ8AEyc-C"
       },
@@ -325,7 +325,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wfDHFToY4ePI",
-        "outputId": "752ac1e8-d41a-4271-8566-0b32582d2f1e"
+        "outputId": "02eab108-c31c-4018-eaf4-7f57187d0e97"
       },
       "execution_count": 2,
       "outputs": [
@@ -415,7 +415,7 @@
       "metadata": {
         "id": "egtgBmAtd0um"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -449,7 +449,7 @@
       "metadata": {
         "id": "Ouil-cf_d8jW"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -472,7 +472,7 @@
       "metadata": {
         "id": "7RMBrttY3pkd"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -495,7 +495,7 @@
       "metadata": {
         "id": "b882x1p63ps0"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -518,7 +518,7 @@
       "metadata": {
         "id": "bG5FNQmk3p0j"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -540,7 +540,7 @@
         "id": "KR_AnrIY5YLl",
         "outputId": "96f25aa9-1dab-4f44-a623-0743b4ef12d2"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -579,7 +579,7 @@
       "metadata": {
         "id": "seFBhqCSeC7C"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -601,7 +601,7 @@
       "metadata": {
         "id": "ZH4QBxCK7L16"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -624,7 +624,7 @@
       "metadata": {
         "id": "3qNPZCAC7L95"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -647,7 +647,7 @@
       "metadata": {
         "id": "QKxWVqUJ7MGB"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -670,7 +670,7 @@
       "metadata": {
         "id": "O-EmgJ9_7MMR"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -693,7 +693,7 @@
         "id": "6OYHaLuL8kko",
         "outputId": "eaeb95a4-7ed7-4620-db2a-6b0f1bca2100"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -734,13 +734,190 @@
     {
       "cell_type": "code",
       "source": [
-        "# code"
+        "# code\n",
+        "dataset=pd.read_csv(\"creditcard.csv\")\n",
+        "\n",
+        "Xtrain = dataset.drop('Class', axis=1)\n",
+        "ytrain = dataset['Class']\n",
+        "\n",
+        "scaler = StandardScaler()\n",
+        "xtrainS = scaler.fit_transform(Xtrain)\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(xtrainS, ytrain, test_size=0.3, random_state=40)\n"
       ],
       "metadata": {
         "id": "Rw_-8FIf2KxW"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Decision tree\n",
+        "DT = DecisionTreeClassifier(criterion=\"gini\", random_state=40, max_depth=5, min_samples_leaf=10)\n",
+        "DT.fit(xtrainS, ytrain)\n",
+        "\n",
+        "\n",
+        "y_predDT = DT.predict(X_test)\n",
+        "\n",
+        "accDT =  accuracy_score(y_test, y_predDT)\n",
+        "preDT= metrics.precision_score(y_test, y_predDT,average='macro')\n",
+        "\n",
+        "recallDT= metrics.recall_score(y_test, y_predDT,average='macro')\n",
+        "f1DT = metrics.f1_score(y_test, y_predDT,average='macro') "
+      ],
+      "metadata": {
+        "id": "3eGoill3HN2W"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Knn\n",
+        "knn = KNeighborsClassifier(n_neighbors=5)\n",
+        "knn.fit(xtrainS, ytrain)\n",
+        "y_predKnnBest = knn.predict(X_test)\n",
+        "    \n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "accKnn = accuracy_score(y_test, y_predKnnBest)\n",
+        "preKnn = metrics.precision_score(y_test, y_predKnnBest,average='macro')\n",
+        "recallKnn= metrics.recall_score(y_test, y_predKnnBest,average='macro')\n",
+        "f1Knn = metrics.f1_score(y_test, y_predKnnBest,average='macro') "
+      ],
+      "metadata": {
+        "id": "tssZJytvHN56"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Logistic Regression\n",
+        "LR = LogisticRegression(max_iter=1000)\n",
+        "LR.fit(xtrainS, ytrain)\n",
+        "y_predLR = LR.predict(X_test)\n",
+        "accLR = accuracy_score(y_test, y_predLR)\n",
+        "preLR = metrics.precision_score(y_test, y_predLR,average='macro')\n",
+        "recallLR= metrics.recall_score(y_test, y_predLR,average='macro')\n",
+        "f1LR = metrics.f1_score(y_test, y_predLR,average='macro') "
+      ],
+      "metadata": {
+        "id": "xCfVxsk8HN_r"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Random forest\n",
+        "\n",
+        "rfc=RandomForestClassifier(n_estimators=100)\n",
+        "\n",
+        "rfc.fit(xtrainS,ytrain)\n",
+        "\n",
+        "\n",
+        "y_predRFC = rfc.predict(X_test)\n",
+        "\n",
+        "accRFC =  accuracy_score(y_test, y_predRFC)\n",
+        "preRFC= metrics.precision_score(y_test, y_predRFC,average='macro')\n",
+        "\n",
+        "recallRFC= metrics.recall_score(y_test, y_predRFC,average='macro')\n",
+        "f1RFC = metrics.f1_score(y_test, y_predRFC,average='macro') "
+      ],
+      "metadata": {
+        "id": "ioa9S2tQHOKP"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#SVM poly cái này em dùng Linear nó chạy tới hơn 15 phút luôn nê e sài poly ạạ\n",
+        "svm = svm.SVC(kernel='poly') # Poly Kernel\n",
+        "\n",
+        "svm.fit(xtrainS, ytrain)\n",
+        "\n",
+        "\n",
+        "y_predSVM = svm.predict(X_test)\n",
+        "\n",
+        "accSvm =  accuracy_score(y_test, y_predSVM)\n",
+        "preSvm= metrics.precision_score(y_test, y_predSVM,average='macro')\n",
+        "\n",
+        "recallSvm= metrics.recall_score(y_test, y_predSVM,average='macro')\n",
+        "f1Svm = metrics.f1_score(y_test, y_predSVM,average='macro') "
+      ],
+      "metadata": {
+        "id": "iwEPtu5iLipZ"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Naive Bayes Gaussion\n",
+        "nb = GaussianNB()\n",
+        "nb.fit(xtrainS, ytrain)\n",
+        "\n",
+        "\n",
+        "y_predNB = nb.predict(X_test)\n",
+        "\n",
+        "accNB =  accuracy_score(y_test, y_predNB)\n",
+        "preNB= metrics.precision_score(y_test, y_predNB,average='macro')\n",
+        "\n",
+        "recallNB= metrics.recall_score(y_test, y_predNB,average='macro')\n",
+        "f1NB = metrics.f1_score(y_test, y_predNB,average='macro')"
+      ],
+      "metadata": {
+        "id": "teiR2TBPJs8I"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "t4 = PrettyTable(['Name Metric measure','Decision Tree','Random Forest',\"Naive Bayes (Gaussian)\",\"Knn\",\"Logictis Regression\",\"SVM\"])\n",
+        "t4.add_row(['Accuracy',accDT,accRFC,accNB,accKnn,accLR,accSvm])\n",
+        "t4.add_row(['Precision Score',preDT,preRFC,preNB,preKnn,preLR,preSvm])\n",
+        "t4.add_row(['Recall Score',recallDT,recallRFC,recallNB,recallKnn,recallLR,recallSvm])\n",
+        "t4.add_row(['F1',f1DT,f1RFC,f1NB,f1Knn,f1LR,f1Svm])\n",
+        "\n",
+        "print(t4)"
+      ],
+      "metadata": {
+        "id": "pbiiCpIwJtB5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6e4b3cda-6a1f-4572-bc3f-dfddfb056312"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---------------------+--------------------+---------------+------------------------+--------------------+---------------------+--------------------+\n",
+            "| Name Metric measure |   Decision Tree    | Random Forest | Naive Bayes (Gaussian) |        Knn         | Logictis Regression |        SVM         |\n",
+            "+---------------------+--------------------+---------------+------------------------+--------------------+---------------------+--------------------+\n",
+            "|       Accuracy      | 0.9996605924417448 |      1.0      |   0.9786173238299217   | 0.9996957035684608 |  0.9992977774656788 | 0.9998127406575144 |\n",
+            "|   Precision Score   | 0.9750718280443109 |      1.0      |   0.5305296159813748   | 0.9832044114717017 |  0.944712923145425  | 0.9999062364482367 |\n",
+            "|     Recall Score    | 0.916631498739816  |      1.0      |   0.9169448245808518   | 0.9202664097878965 |  0.8223992935833824 | 0.9420289855072463 |\n",
+            "|          F1         | 0.943930463326573  |      1.0      |   0.5517872623904669   | 0.9495362139641739 |  0.8737737793537554 | 0.9691838830586736 |\n",
+            "+---------------------+--------------------+---------------+------------------------+--------------------+---------------------+--------------------+\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
