--- a/Lab_7_20130217_BuiThanhDam.ipynb
+++ b/Lab_7_20130217_BuiThanhDam.ipynb
@@ -48,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 1,
       "metadata": {
         "id": "DoVWQ8AEyc-C"
       },
@@ -109,7 +109,7 @@
         },
         "outputId": "f5aec6a9-f32c-4bf9-fc6c-a3fbc761bac2"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,7 +140,7 @@
         "id": "mfHyf57Q5TiC",
         "outputId": "e5032de5-93a2-43b2-c945-67b1bfc921de"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -186,7 +186,7 @@
         },
         "outputId": "bf477ece-08ce-4d75-919d-d21f61828aa3"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -216,7 +216,7 @@
         "id": "rCPHofFd516b",
         "outputId": "c16f80c4-b240-4dc6-b01a-22e1e748b3b6"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -269,9 +269,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b5968b11-5b99-4db2-c1b0-2389f5e1da53"
+        "outputId": "a29a9cff-49ed-4be8-fe54-eaa562d09e08"
       },
-      "execution_count": 64,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -279,7 +279,7 @@
           "text": [
             "/usr/local/lib/python3.9/dist-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
             "  warnings.warn(\n",
-            "<ipython-input-64-4737323bb15d>:16: FutureWarning: Unlike other reduction functions (e.g. `skew`, `kurtosis`), the default behavior of `mode` typically preserves the axis it acts along. In SciPy 1.11.0, this behavior will change: the default value of `keepdims` will become False, the `axis` over which the statistic is taken will be eliminated, and the value None will no longer be accepted. Set `keepdims` to True or False to avoid this warning.\n",
+            "<ipython-input-2-4737323bb15d>:16: FutureWarning: Unlike other reduction functions (e.g. `skew`, `kurtosis`), the default behavior of `mode` typically preserves the axis it acts along. In SciPy 1.11.0, this behavior will change: the default value of `keepdims` will become False, the `axis` over which the statistic is taken will be eliminated, and the value None will no longer be accepted. Set `keepdims` to True or False to avoid this warning.\n",
             "  labels[mask] = mode(dataset.target[mask])[0]\n"
           ]
         },
@@ -291,7 +291,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 64
+          "execution_count": 2
         }
       ]
     },
@@ -317,17 +317,19 @@
         "cv= KFold(n_splits=10, random_state=1, shuffle=True)\n",
         "\n",
         "# evaluate model\n",
-        "scores = cross_val_score(rfc, x_train, y_train, scoring='accuracy', cv=cv)\n",
+        "accRFC = cross_val_score(rfc, x_train, y_train, scoring='accuracy', cv=cv).mean()\n",
         "\n",
         "\n",
         "\n",
-        "y_predRFC = rfc.predict(x_test)\n",
         "\n",
-        "accRFC =  scores.mean()\n",
-        "preRFC= metrics.precision_score(y_test, y_predRFC,average='macro')\n",
+        "# y_predRFC = rfc.predict(x_test)\n",
         "\n",
-        "recallRFC= metrics.recall_score(y_test, y_predRFC,average='macro')\n",
-        "f1RFC = metrics.f1_score(y_test, y_predRFC,average='macro')\n",
+        "preRFC= cross_val_score(rfc, x_train, y_train, scoring='precision_macro', cv=cv).mean()\n",
+        "\n",
+        "recallRFC= cross_val_score(rfc, x_train, y_train, scoring='recall_macro', cv=cv).mean()\n",
+        "\n",
+        "f1RFC = cross_val_score(rfc, x_train, y_train, scoring='f1_macro', cv=cv).mean()\n",
+        "\n",
         "\n",
         "# GaussianNB Naive Bayes\n",
         "\n",
@@ -340,10 +342,11 @@
         "scores = cross_val_score(nb, x_train, y_train, scoring='accuracy', cv=cv)\n",
         "\n",
         "accNB =    scores.mean()\n",
-        "preNB= metrics.precision_score(y_test, y_predNB,average='macro')\n",
         "\n",
-        "recallNB= metrics.recall_score(y_test, y_predNB,average='macro')\n",
-        "f1NB = metrics.f1_score(y_test, y_predNB,average='macro') \n",
+        "preNB= cross_val_score(nb, x_train, y_train, scoring='precision_macro', cv=cv).mean()\n",
+        "\n",
+        "recallNB=cross_val_score(nb, x_train, y_train, scoring='recall_macro', cv=cv).mean()\n",
+        "f1NB =cross_val_score(nb, x_train, y_train, scoring='f1_macro', cv=cv).mean()\n",
         "\n",
         "#Knn\n",
         "knn = KNeighborsClassifier(n_neighbors=4)\n",
@@ -354,9 +357,9 @@
         "\n",
         "accKnn =  scores.mean()\n",
         "\n",
-        "preKnn = metrics.precision_score(y_test, y_predKnnBest,average='macro')\n",
-        "recallKnn= metrics.recall_score(y_test, y_predKnnBest,average='macro')\n",
-        "f1Knn = metrics.f1_score(y_test, y_predKnnBest,average='macro') \n",
+        "preKnn =  cross_val_score(knn, x_train, y_train, scoring='precision_macro', cv=cv).mean()\n",
+        "recallKnn=  cross_val_score(knn, x_train, y_train, scoring='recall_macro', cv=cv).mean()\n",
+        "f1Knn = cross_val_score(knn, x_train, y_train, scoring='f1_macro', cv=cv).mean()\n",
         "\n",
         "#Table\n",
         "t3 = PrettyTable(['Name Metric measure','KMean','Random Forest',\"Naive Bayes (Gaussian)\",\"Knn\"])\n",
@@ -372,9 +375,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "506d027c-e4cf-4252-ce06-a2673fbd9329"
+        "outputId": "d0cd41f5-795e-4e9e-93e0-e89b7b9a4405"
       },
-      "execution_count": 66,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -383,10 +386,10 @@
             "+---------------------+--------------------+--------------------+------------------------+--------------------+\n",
             "| Name Metric measure |       KMean        |   Random Forest    | Naive Bayes (Gaussian) |        Knn         |\n",
             "+---------------------+--------------------+--------------------+------------------------+--------------------+\n",
-            "|       Accuracy      | 0.7935447968836951 | 0.9705841269841271 |   0.8488444444444445   | 0.9824952380952382 |\n",
-            "|   Precision Score   | 0.8049510946090495 |        1.0         |   0.8754996278813421   | 0.9947880879546108 |\n",
-            "|     Recall Score    | 0.7935735538874538 |        1.0         |   0.8432015187160523   | 0.994736842105263  |\n",
-            "|          F1         | 0.7899801068577756 |        1.0         |   0.8469725015266443   | 0.994716022275721  |\n",
+            "|       Accuracy      | 0.7935447968836951 | 0.9689714285714285 |   0.8488444444444445   | 0.9824952380952382 |\n",
+            "|   Precision Score   | 0.8049510946090495 | 0.966558411359882  |   0.8631844675792044   | 0.9813171648612824 |\n",
+            "|     Recall Score    | 0.7935735538874538 | 0.971876389992876  |   0.8497928746949646   | 0.9832475996225994 |\n",
+            "|          F1         | 0.7899801068577756 | 0.9709921136764935 |   0.8411400564037403   | 0.9810364517430715 |\n",
             "+---------------------+--------------------+--------------------+------------------------+--------------------+\n"
           ]
         }
