--- a/Lab_7_20130217_BuiThanhDam.ipynb
+++ b/Lab_7_20130217_BuiThanhDam.ipynb
@@ -407,7 +407,8 @@
     {
       "cell_type": "code",
       "source": [
-        "#code\n"
+        "#code\n",
+        "# Supervised learning is better than Unsupervised learning because Supervised learning have score metric measure higher than Supervised learning in 4 measure accuracy, precision,recall,f1 ."
       ],
       "metadata": {
         "id": "Qzh_D-rgvbv9"
